# video-intel

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  INSTALLATION.md  README.md  SKILL.md  config.yaml  pyproject.toml  requirements-dev.txt
.claude/: settings.json
docs/: search-internals.md
docs/adr/: ADR-0001-gemini-as-multimodal-proxy.md  ADR-0002-three-decoupled-tasks.md  ADR-0003-single-model-replaces-pipeline.md  ADR-0004-external-prompt-files.md  ADR-0005-error-tracking-via-meta-json.md  ADR-0006-idempotency-via-filename.md  ADR-0007-per-channel-config.md  ADR-0008-developer-tooling-and-specs.md  ADR-0009-deterministic-video-discovery.md  ADR-0010-llm-concept-normalization.md  ADR-0011-structured-logging.md  ADR-0012-vector-search-lancedb-voyage.md  ADR-0013-hybrid-search-rrf-fusion.md  README.md  template.md
docs/solutions/: README.md
evals/: search-eval-queries.md
prompts/: concepts.md  mindmap-heavy.md  mindmap-knowledge.md  mindmap-light.md  mindmap-notebooklm-style.md  transcript.md
scripts/: video_intel.py
specs/: README.md  agent-rules.md
tests/: conftest.py  test_utils.py
