[project]
name = "video-intel"
version = "1.3.0"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "google-api-python-client",
    "pyyaml",
]

[project.optional-dependencies]
vector = [
    "lancedb>=0.20",
    "voyageai>=0.3",
]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [".git", ".claude", "work", "video-intel"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (modernize syntax for 3.12)
    "B",    # flake8-bugbear (common pitfalls)
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF005", # list concatenation — readability over micro-optimization
    "RUF015", # `list(x)[0]` vs `next(iter(x))` — readability
    "SIM108", # if/else vs ternary — explicit blocks are clearer
]

[tool.ruff.lint.isort]
known-first-party = ["video_intel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-v"
